# llmroute

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  demo_requests.py  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
BORG/agents/: enterprise-collective.yaml
BORG/skills/issue-fix-worktree/: SKILL.md
BORG/skills/issue-fix-worktree/agents/: openai.yaml
BORG/skills/issue-fix-worktree/references/: commands.md
BORG/workflows/: unimatrix-issue-rectification.yaml
config/: borg_collective_workflow.yaml  commit_message_hint.yaml  judge_prompt_system.yaml  model_classify_prompt.yaml  model_priorities.json  router_config.example.yaml  tooluse_system_hint.yaml
html/: settings.html
llmrouter/: __init__.py  app.py  desktop.py  issue_agent.py  issues.py  protocols.py  requests.py  services.py  settings.py  shared.py
scripts/: agent_issue_worktree.ps1  agent_issue_worktree.sh  start_llm_router.ps1  test_deep_connection.ps1
tests/: live_llm_routing_test.py  live_router_tests.py  test_router.py
