[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmrouter"
version = "0.1.0"
description = "OpenAI/Anthropic-compatible router for local and deep models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.0",
  "pydantic>=2.8.0",
  "pystray>=0.19.5",
  "Pillow>=10.3.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
llmrouter = "llmrouter.app:main"

[tool.setuptools]
packages = ["llmrouter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
